--- a/src/client/src/shared/components/Button/Button.css
+++ b/src/client/src/shared/components/Button/Button.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #00a2ff;
+  border: 1px solid rgb(0, 162, 255);
   border-radius: 4px;
-  background: #00a2ff;
+  background: rgb(0, 162, 255);
   color: white;
   cursor: pointer;
   margin-right: 1rem;
@@ -17,38 +17,40 @@
 
 .button:hover,
 .button:active {
-  background: #1888c9;
-  border-color: #1888c9;
+  background: rgb(24, 136, 201);
+  border-color: rgb(24, 136, 201);
 }
 
+/* TODO: CHANGE */
 .button--inverse {
-  background: transparent;
-  color: #ff0055;
+  background: rgb(244, 239, 239);
+  color: rgb(24, 136, 201);
 }
 
+/* TODO: CHANGE */
 .button--inverse:hover,
 .button--inverse:active {
   color: white;
-  background: #ff0055;
+  background: rgb(24, 136, 201);
 }
 
 .button--danger {
-  background: #830000;
-  border-color: #830000;
+  background: rgb(236, 37, 37);
+  border-color: rgb(236, 37, 37);
 }
 
 .button--danger:hover,
 .button--danger:active {
-  background: #f34343;
-  border-color: #f34343;
+  background: rgb(243, 67, 67);
+  border-color: rgb(243, 67, 67);
 }
 
 .button:disabled,
 .button:hover:disabled,
 .button:active:disabled {
-  background: #ccc;
-  color: #979797;
-  border-color: #ccc;
+  background: rgb(204, 204, 204);
+  color: rgb(151, 151, 151);
+  border-color: rgb(204, 204, 204);
   cursor: auto;
 }
 
