--- a/src/client/src/shared/components/Card/Card.module.scss
+++ b/src/client/src/shared/components/Card/Card.module.scss
@@ -1,7 +1,7 @@
 .card {
-  min-height: 40px;
+  min-height: 80px;
   position: relative;
-  margin: 0;
+  margin: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   border-radius: 6px;
   padding: 1rem;
