--- a/src/client/src/Auth/AuthPage.scss
+++ b/src/client/src/Auth/AuthPage.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 50%;
 
     h1 {
         color: rgb(5, 5, 53);
