--- a/src/client/src/index.scss
+++ b/src/client/src/index.scss
@@ -5,4 +5,10 @@
 body {
     font-family: "Roboto", "Arimo", "Arial", "sans-serif";
     background-color: rgb(224, 241, 241);
+
+    main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
