wrong credentials handling

--- a/src/client/src/Auth/AuthPage.scss
+++ b/src/client/src/Auth/AuthPage.scss
@@ -33,6 +33,11 @@
             }
         }
 
+        p {
+            color: red;
+            font-size: small;
+        }
+
         button {
             width: 300px;
             margin: 0;
