--- a/src/client/src/Lists/components/Lists-List/ListsList.scss
+++ b/src/client/src/Lists/components/Lists-List/ListsList.scss
@@ -5,9 +5,10 @@
     justify-content: center;
     align-items: center;
 
-    h2 {
+    .no-lists {
         text-align: center;
         color: rgb(5, 5, 53);
+        width: 100rem;
     }
 
     button {
