--- a/src/client/src/Lists/ListsPage.scss
+++ b/src/client/src/Lists/ListsPage.scss
@@ -3,6 +3,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media only screen and (max-width: 450px) {
+        width: 90vw;
+        font-size: 14px;
+    }
+    @media only screen and (min-width: 451px) and (max-width: 700px) {
+        width: 80vw;
+        font-size: 16px;
+    }
+    @media only screen and (min-width: 701px) and (max-width: 1000px) {
+        width: 70vw;
+        font-size: 18px;
+    }
 
     h1 {
         font-size: 50px;
