--- a/src/client/src/Lists/ListsPage.scss
+++ b/src/client/src/Lists/ListsPage.scss
@@ -3,21 +3,25 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 20px;
+    width: 70vw;
+
     @media only screen and (max-width: 450px) {
-        width: 90vw;
+        width: 95vw;
         font-size: 14px;
     }
     @media only screen and (min-width: 451px) and (max-width: 700px) {
-        width: 80vw;
+        width: 90vw;
         font-size: 16px;
     }
     @media only screen and (min-width: 701px) and (max-width: 1000px) {
-        width: 70vw;
+        width: 80vw;
         font-size: 18px;
     }
 
     h1 {
-        font-size: 50px;
+        width: 100%;
+        font-size: 250%;
         color: rgb(5, 5, 53);
         text-align: center;
     }
