--- a/src/client/src/Lists/components/List-Item/ListItem.scss
+++ b/src/client/src/Lists/components/List-Item/ListItem.scss
@@ -1,49 +1,61 @@
-@keyframes cardHoverOn {
-    100% {
-        transform: scale(1.02, 1);
-    }
-}
-
-@keyframes cardHoverOff {
-    100% {
-        transform: scale(0.98, 1);
-    }
-}
-
 .hover-animation {
-    animation: cardHoverOff 0.15s linear forwards;
+    @media only screen and (min-width: 1000px) {
+        width: 700px;
+        transition: width 0.15s ease-in-out;
 
-    &:hover,
-    &:active {
-        animation: cardHoverOn 0.15s linear forwards;
+        &:hover,
+        &:active {
+            width: 730px;
+        }
     }
 }
 
-.list-item {
-    width: 50vw;
+li {
+    width: 100%;
+    font-size: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
-    a {
-        align-self: stretch;
-        width: 40vw;
-        text-decoration: none;
-        color: rgb(5, 5, 53);
-        display: flex;
-        justify-content: flex-start;
-    }
-
-    .buttons {
+    .list-item {
         display: flex;
         justify-content: space-between;
+        align-items: center;
+        font-size: 100%;
+        @media only screen and (max-width: 999px) {
+            width: 80%;
+            min-width: 300px;
+        }
 
-        button {
-            width: 3vw;
-            height: 4.3vh;
+        a {
+            margin: 0;
+            width: 60%;
+            font-size: 80%;
+            text-decoration: none;
+            color: rgb(5, 5, 53);
             display: flex;
-            justify-content: center;
-            align-items: center;
+            justify-content: flex-start;
+        }
+
+        .buttons {
+            width: 30%;
+            font-size: 100%;
+            display: flex;
+            justify-content: flex-end;
+            margin: 0;
+
+            button {
+                font-size: 100%;
+                width: 20%;
+                height: 4.3vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                i {
+                    font-size: 120%;
+                }
+            }
         }
     }
 }
