--- a/src/client/src/Lists/components/Lists-List/ListsList.scss
+++ b/src/client/src/Lists/components/Lists-List/ListsList.scss
@@ -4,16 +4,22 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    font-size: 100%;
+    padding: 0;
 
     .no-lists {
         text-align: center;
         color: rgb(5, 5, 53);
-        width: 100rem;
+        width: 100%;
     }
 
-    button {
+    .create-button {
         margin-left: 17px;
-        width: 49vw;
+        font-size: 120%;
+        width: 80%;
+        max-width: 700px;
+        min-width: 210px;
         height: 50px;
     }
 }
