--- a/src/client/src/Lists/components/Searchbar/Searchbar.scss
+++ b/src/client/src/Lists/components/Searchbar/Searchbar.scss
@@ -1,8 +1,17 @@
 .searchbar {
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 100%;
+
     input {
-        width: 300px;
-        height: 36px;
-        font-size: large;
+        width: 80%;
+        max-width: 300px;
+        min-width: 180px;
+        height: 40px;
+        font-size: 100%;
         border: 2px solid rgb(111, 151, 160);
         border-radius: 5px;
         box-shadow: 0 0 2px rgb(123, 166, 213);
@@ -15,5 +24,11 @@
             border-color: rgb(46, 173, 223);
             box-shadow: 0 0 4px;
         }
+    }
+    button {
+        padding: 8px 1px;
+        width: 30%;
+        max-width: 130px;
+        min-width: 75px;
     }
 }
