--- a/src/client/src/Tasks/TasksPage.scss
+++ b/src/client/src/Tasks/TasksPage.scss
@@ -4,8 +4,54 @@
     justify-content: center;
     align-items: center;
 
+    @media only screen and (min-width: 1201px) {
+        font-size: 20px;
+        width: 70vw;
+    }
+
+    @media only screen and (min-width: 1101px) and (max-width: 1200px) {
+        width: 75vw;
+        font-size: 19px;
+    }
+
+    @media only screen and (min-width: 1001px) and (max-width: 1100px) {
+        width: 78vw;
+        font-size: 18px;
+    }
+
+    @media only screen and (min-width: 931px) and (max-width: 1000px) {
+        width: 80vw;
+        font-size: 17px;
+    }
+
+    @media only screen and (min-width: 841px) and (max-width: 930px) {
+        width: 85vw;
+        font-size: 16px;
+    }
+
+    @media only screen and (min-width: 721px) and (max-width: 840px) {
+        width: 90vw;
+        font-size: 15px;
+    }
+
+    @media only screen and (min-width: 651px) and (max-width: 720px) {
+        width: 95vw;
+        font-size: 14px;
+    }
+
+    @media only screen and (min-width: 450px) and (max-width: 650px) {
+        width: 85vw;
+        font-size: 15px;
+    }
+
+    @media only screen and (max-width: 450px) {
+        width: 90vw;
+        font-size: 15px;
+    }
+
     h1 {
-        font-size: 50px;
+        width: 100%;
+        font-size: 250%;
         color: rgb(5, 5, 53);
         text-align: center;
     }
