--- a/src/client/src/Tasks/components/TaskItem/TaskItem.scss
+++ b/src/client/src/Tasks/components/TaskItem/TaskItem.scss
@@ -16,80 +16,183 @@
     }
 }
 
-.task-item {
-    width: 70vw;
-    height: 10vh;
+li {
+    width: 100%;
+    font-size: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
-    .name {
+    .task-item {
+        color: rgb(5, 5, 53);
+        font-size: 100%;
+        width: 100%;
+        max-width: 950px;
+        min-width: 310px;
+        height: 12vh;
         display: flex;
-        flex-direction: row;
         justify-content: space-between;
         align-items: center;
 
-        i {
-            user-select: none;
-            cursor: pointer;
-            animation: checkBox-hover-off 0.15s linear forwards;
+        @media only screen and (max-width: 650px) {
+            height: auto;
+        }
 
-            &:hover,
-            &:active {
-                animation: checkBox-hover-on 0.15s linear forwards;
+        .task-details {
+            font-size: 100%;
+            width: 80%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            @media only screen and (max-width: 650px) {
+                flex-direction: column;
+            }
+
+            .name {
+                width: 40%;
+                font-size: 80%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+
+                @media only screen and (max-width: 650px) {
+                    width: 70%;
+                    font-size: 100%;
+                }
+
+                i {
+                    user-select: none;
+                    cursor: pointer;
+                    font-size: 130%;
+                    -webkit-tap-highlight-color: transparent;
+                    margin: 3px;
+
+                    @media only screen and (min-width: 1000px) {
+                        animation: checkBox-hover-off 0.15s linear forwards;
+
+                        &:hover,
+                        &:active {
+                            animation: checkBox-hover-on 0.15s linear forwards;
+                        }
+                    }
+                }
+
+                h2 {
+                    font-size: 100%;
+                }
+
+                .done {
+                    text-decoration: line-through;
+                }
+            }
+
+            span {
+                height: 10vh;
+                border: 1px solid rgba(191, 184, 184, 0.7);
+
+                @media only screen and (max-width: 650px) {
+                    height: 1px;
+                    width: 70%;
+                    min-height: 1px;
+                }
+            }
+
+            .details {
+                font-size: 80%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                max-width: 25%;
+                margin: auto;
+
+                @media only screen and (max-width: 650px) {
+                    max-width: 70%;
+                    width: 70%;
+                    flex-direction: row;
+                    justify-content: space-between;
+                }
+
+                h3 {
+                    font-size: 100%;
+                }
+
+                p {
+                    font-size: 90%;
+                }
+            }
+
+            .responsibility {
+                min-width: 108px;
+            }
+
+            .etc {
+                min-width: 48px;
             }
         }
 
-        .done {
-            text-decoration: line-through;
+        .buttons-span {
+            height: 10vh;
+            min-height: 60px;
+            border: 1px solid rgba(191, 184, 184, 0.7);
+
+            @media only screen and (max-width: 650px) {
+                display: none;
+            }
         }
-    }
-    span {
-        height: 5rem;
-        border: 1px solid rgba(191, 184, 184, 0.7);
-    }
 
-    div {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .responsibility {
-        max-width: 10vw;
-    }
-    .etc {
-        max-width: 5vw;
-    }
-    .due-date {
-        max-width: 10vw;
-    }
-
-    .buttons {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-
-        button {
-            width: 3vw;
-            height: 4.3vh;
+        .buttons {
+            width: 15%;
+            font-size: 100%;
             display: flex;
-            justify-content: center;
+            flex-direction: row;
+            justify-content: space-evenly;
             align-items: center;
+            margin-right: 0;
+            justify-self: flex-end;
+
+            @media only screen and (max-width: 768px) {
+                width: 10%;
+                height: 100%;
+                flex-direction: column;
+                justify-content: space-evenly;
+                margin-right: 5px;
+            }
+
+            button {
+                font-size: 100%;
+                width: 20%;
+                height: 5vh;
+                min-height: 30px;
+                max-height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 2px;
+
+                @media only screen and (max-width: 768px) {
+                    height: 5vh;
+                }
+
+                i {
+                    font-size: 100%;
+                }
+            }
         }
     }
-}
 
-.low {
-    box-shadow: 0 0 4px 4px rgb(209, 209, 7);
-}
+    .low {
+        box-shadow: 0 0 4px 4px rgb(209, 209, 7);
+    }
 
-.medium {
-    box-shadow: 0 0 4px 4px rgb(248, 156, 8);
-}
+    .medium {
+        box-shadow: 0 0 4px 4px rgb(248, 156, 8);
+    }
 
-.high {
-    box-shadow: 0 0 4px 4px rgb(235, 12, 12);
+    .high {
+        box-shadow: 0 0 4px 4px rgb(235, 12, 12);
+    }
 }
