--- a/src/client/src/shared/components/Navigation/NavLinks/NavLinks.scss
+++ b/src/client/src/shared/components/Navigation/NavLinks/NavLinks.scss
@@ -5,12 +5,13 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
     li {
-        margin: 0 0.5rem;
+        min-width: 100px;
+        margin: 1rem;
     }
 
     a {
@@ -35,6 +36,10 @@
         font: inherit;
     }
 
+    button:focus {
+        outline: none;
+    }
+
     button:hover,
     button:active {
         background: rgb(244, 239, 239);
@@ -42,77 +47,12 @@
     }
 }
 
-// .nav-links {
-//     list-style: none;
-//     margin: 0;
-//     padding: 0;
-//     width: 100%;
-//     height: 100%;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
+@media (min-width: 768px) {
+    .nav-links {
+        flex-direction: row;
 
-//     li {
-//         margin: 1rem;
-//     }
-
-//     a {
-//         border: 1px solid transparent;
-//         color: #292929;
-//         text-decoration: none;
-//         padding: 0.5rem;
-//     }
-
-//     a:hover,
-//     a:active,
-//     a.active {
-//         background: #f8df00;
-//         border-color: #292929;
-//         color: #292929;
-//     }
-//     button {
-//         cursor: pointer;
-//         border: 1px solid #292929;
-//         color: #292929;
-//         background: transparent;
-//         padding: 0.5rem;
-//         font: inherit;
-//     }
-
-//     button:focus {
-//         outline: none;
-//     }
-
-//     button:hover,
-//     button:active {
-//         background: #292929;
-//         color: white;
-//     }
-// }
-
-// @media (min-width: 768px) {
-//     .nav-links {
-//         flex-direction: row;
-
-//         li {
-//             margin: 0 0.5rem;
-//         }
-
-//         a {
-//             color: white;
-//             text-decoration: none;
-//         }
-
-//         button {
-//             border: 1px solid white;
-//             color: white;
-//             background: transparent;
-//         }
-//         button:hover,
-//         button:active {
-//             background: #f8df00;
-//             color: #292929;
-//         }
-//     }
-// }
+        li {
+            margin: 0 0.5rem;
+        }
+    }
+}
