--- a/src/client/src/Tasks/components/TasksList/TasksList.scss
+++ b/src/client/src/Tasks/components/TasksList/TasksList.scss
@@ -16,6 +16,7 @@
 
     .create-button {
         margin-left: 17px;
+        margin-bottom: 5px;
         font-size: 120%;
         width: 90%;
         max-width: 800px;
