--- a/src/client/src/Auth/AuthPage.scss
+++ b/src/client/src/Auth/AuthPage.scss
@@ -1,18 +1,18 @@
+@import "../index";
+
 .authentication {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    width: 50vw;
+    @include main-div($width: 50vw);
+
     @media only screen and (max-width: 450px) {
         width: 90vw;
         font-size: 14px;
     }
+
     @media only screen and (min-width: 451px) and (max-width: 700px) {
         width: 80vw;
         font-size: 16px;
     }
+
     @media only screen and (min-width: 701px) and (max-width: 1000px) {
         width: 70vw;
         font-size: 18px;
