--- a/src/client/src/index.scss
+++ b/src/client/src/index.scss
@@ -40,3 +40,12 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+@mixin main-div($width: 70vw) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    width: $width;
+}
