--- a/src/client/src/Lists/ListsPage.scss
+++ b/src/client/src/Lists/ListsPage.scss
@@ -19,9 +19,6 @@
     }
 
     h1 {
-        width: 100%;
-        font-size: 250%;
-        color: rgb(5, 5, 53);
-        text-align: center;
+        @include heading;
     }
 }
