--- a/src/client/src/index.scss
+++ b/src/client/src/index.scss
@@ -49,3 +49,10 @@ body {
     font-size: 20px;
     width: $width;
 }
+
+@mixin heading($fontSize: 250%) {
+    width: 100%;
+    font-size: $fontSize;
+    color: rgb(5, 5, 53);
+    text-align: center;
+}
