render instead of heroku

--- a/src/client/src/Lists/components/EditList/EditList.scss
+++ b/src/client/src/Lists/components/EditList/EditList.scss
@@ -1,7 +1,8 @@
-.edit {
+.edit-list {
     @media only screen and (min-width: 1000px) {
         width: 700px;
     }
+
     input {
         width: 40%;
         min-width: 110px;
